next round of inspection