@@ -1,86 +1,85 @@
-### 🖥️ Node Analysis: `ip-192-168-52-147.ec2.internal`
+### 🖥️ Node-Level Analysis: ip-192-168-52-147.ec2.internal
 
-#### Node Capacity and Conditions
+#### Node Capacity and Conditions:
 - **CPU**: 8 cores
-- **Memory**: 65,023,384 Ki (~62 GB)
-- **Pods**: 58
+- **Memory**: 65023384 Ki (~62 GB)
+- **Allocatable**: 7910m CPU, 64006552 Ki memory
 - **Conditions**: 
-  - MemoryPressure: `False` (Sufficient memory)
-  - DiskPressure: `False` (No disk pressure)
-  - PIDPressure: `False` (Sufficient PID)
-  - Ready: `True` (Node is ready)
+  - MemoryPressure: False
+  - DiskPressure: False
+  - PIDPressure: False
+  - Ready: True
 
-#### Cloud Provider and Instance Type
-- **Cloud Provider**: AWS
-- **Instance Type**: `r5.2xlarge`
-- **Region/Zone**: `us-east-1/us-east-1d`
+#### Cloud Provider and Instance Type:
+- **Provider**: AWS
+- **Instance Type**: r5.2xlarge
+- **Region/Zone**: us-east-1/us-east-1d
 
-#### Resource Allocation and Utilization
+#### Resource Allocation and Utilization:
 - **CPU Requests**: 220m (2%)
 - **CPU Limits**: 400m (5%)
 - **Memory Requests**: 674Mi (1%)
 - **Memory Limits**: 1280Mi (2%)
-- **No significant OOM events**: 👍
 
-### 🧵 Pod Analysis: `avs-app-aerospike-vector-search-0`
+#### Node-Level Issues:
+- No OOMKill events or system issues detected.
+- Node is healthy with no pressure conditions.
 
-#### Configuration Validation (`aerospike-vector-search.yml`)
-- **Node Roles**: Correctly set as `standalone-indexer`
-- **Heartbeat Seeds**: Configured with two seeds, ensuring redundancy
-- **Listener Addresses**: Advertised listener correctly set to external IP `3.238.188.22`
-- **Interconnect Settings**: Open on `0.0.0.0:5001`, which is appropriate for internal communication
+### 🧵 Pod-Level Analysis: avs-app-aerospike-vector-search-0
 
-#### JVM Configuration
-- **Memory Settings**:
-  - Initial Heap Size: `-Xms` not explicitly set
-  - Maximum Heap Size: `-Xmx50799m` (~49.6 GB)
-  - Soft Max Heap Size: `-XX:SoftMaxHeapSize=53267m`
-  - Reserved Code Cache Size: `-XX:ReservedCodeCacheSize=240m`
-  - Code Heap Sizes: NonNMethod, NonProfiled, Profiled set appropriately
+#### Configuration Review:
+- **Node Roles**: standalone-indexer
+- **Heartbeat Seeds**: Configured with two seeds for redundancy.
+- **Listener Addresses**: Correctly set to 0.0.0.0 for interconnect ports.
+- **Advertised Listeners**: Correctly set with external IP and port.
 
-- **GC Settings**:
-  - GC Type: `-XX:+UseZGC` (Z Garbage Collector)
-  - GC Threads: `-XX:ZYoungGCThreads=2`, `-XX:ZOldGCThreads=2`
-  - GC-specific flags: `-XX:+ZGenerational` enabled
+#### JVM Memory Settings:
+- **Initial Heap Size (-Xms)**: 1027604480 bytes (~980 MB)
+- **Maximum Heap Size (-Xmx)**: 53267660800 bytes (~50 GB)
+- **Soft Max Heap Size**: 53267660800 bytes (~50 GB)
+- **Reserved Code Cache Size**: 251658240 bytes (~240 MB)
+- **Code Heap Sizes**: NonNMethod: 5839372 bytes, NonProfiled: 122909434 bytes, Profiled: 122909434 bytes
 
-- **Other Important Flags**:
-  - NUMA settings: `-XX:-UseNUMA`, `-XX:-UseNUMAInterleaving` (NUMA not used)
-  - Compressed oops: Not explicitly disabled, likely enabled by default
-  - Pre-touch settings: `-XX:+AlwaysPreTouch` (pre-touch memory)
-  - Compiler settings: `-XX:CICompilerCount=4`
-  - Exit on OOM: `-XX:+ExitOnOutOfMemoryError` (ensures JVM exits on OOM)
+#### GC Settings:
+- **GC Type**: ZGC with generational support
+- **GC Threads**: 2 young, 2 old
+- **Other Flags**: 
+  - NUMA settings disabled
+  - Compressed oops enabled
+  - AlwaysPreTouch enabled
+  - Exit on OOM enabled
 
-- **Module and Package Settings**:
-  - Added modules: `--add-modules jdk.incubator.vector`
-  - Opened packages: Multiple packages opened for internal access
-  - Exported packages: Several packages exported for internal use
+#### Module and Package Settings:
+- **Added Modules**: jdk.incubator.vector
+- **Opened Packages**: Multiple packages opened for ALL-UNNAMED
+- **Exported Packages**: Several packages exported for ALL-UNNAMED
 
-#### GC Heap Info
-- **Current Heap Usage**: 1240M
-- **Heap Capacity**: 2494M
+#### Heap Usage:
+- **Current Heap Usage**: 348M
+- **Heap Capacity**: 2712M
 - **Max Capacity**: 50800M
-- **Metaspace Usage**: 80,972K
-- **Class Space Usage**: 8,821K
+- **Metaspace Usage**: 80984K
+- **Class Space Usage**: 8823K
 
 ### 🛠️ Recommendations
 
-1. **Node-Level Optimizations**:
-   - **CPU and Memory Utilization**: Consider increasing CPU and memory requests for critical pods to ensure resource availability during peak loads.
-   - **Pod Distribution**: Balance pod distribution across nodes to avoid potential resource contention.
+#### 1. Node-Level Optimizations:
+- **Scaling**: Consider scaling down the instance type if resource utilization remains consistently low.
+- **Monitoring**: Continue monitoring node conditions to ensure no future pressure conditions arise.
 
-2. **Pod-Level Configurations**:
-   - **Heartbeat Configuration**: Ensure all seed nodes are reachable and update DNS if necessary.
-   - **Listener Security**: If not already secured, consider using network policies to restrict access to interconnect ports.
+#### 2. Pod-Level Configurations:
+- **Heartbeat Configuration**: Ensure heartbeat seeds are updated if any node changes occur.
+- **Listener Configuration**: Verify that listener addresses remain accessible and correct.
 
-3. **Resource Allocation Adjustments**:
-   - **JVM Heap Size**: The current max heap size is set close to the node's total memory. Consider reducing `-Xmx` to allow headroom for other processes and avoid potential OOM issues.
+#### 3. Resource Allocation Adjustments:
+- **CPU and Memory Requests**: Adjust CPU and memory requests to better reflect actual usage, potentially freeing up resources for other pods.
 
-4. **Performance Improvements**:
-   - **GC Tuning**: Monitor ZGC performance and adjust thread counts if necessary to optimize garbage collection times.
-   - **NUMA Awareness**: If running on NUMA hardware, consider enabling NUMA settings for potential performance gains.
+#### 4. Performance Improvements:
+- **GC Configuration**: Review ZGC performance and adjust thread counts if necessary based on application load.
+- **Heap Management**: Monitor heap usage and adjust -Xmx if the application consistently uses less memory.
 
-5. **JVM Memory Settings**:
-   - **Initial Heap Size**: Explicitly set `-Xms` to match `-Xmx` for consistent performance.
-   - **Code Cache**: Monitor code cache usage and adjust `-XX:ReservedCodeCacheSize` if necessary.
+#### 5. JVM Memory Settings:
+- **Heap Size**: Ensure -Xms and -Xmx are appropriately set to avoid excessive garbage collection.
+- **Code Cache**: Monitor code cache usage and adjust if necessary to prevent performance degradation.
 
-By addressing these recommendations, you can ensure optimal performance and stability for the Aerospike Vector Search deployment on this node. 🛡️
+By implementing these recommendations, you can optimize both node and pod performance, ensuring efficient resource usage and maintaining application stability. 🚀
